:bug: Update the code text area to have correct scrollbar design

--- a/framework-plugins/lisk-framework-dashboard-plugin/src/ui/styles/_constants.scss
+++ b/framework-plugins/lisk-framework-dashboard-plugin/src/ui/styles/_constants.scss
@@ -82,3 +82,19 @@ $breakpoint-down: (
 		@content;
 	}
 }
+
+@mixin lisk-scrollbar {
+	scrollbar-width: 14px;
+	scrollbar-color: #c5cfe4;
+
+	&::-webkit-scrollbar {
+		width: 14px;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background: #c5cfe4;
+		background-clip: content-box;
+		border-radius: 20px;
+		border: 5px solid transparent;
+	}
+}
